Fixed styling issue for club ethos on mobile

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -246,7 +246,7 @@ footer {
         padding: 30px 0;
         margin: 0;
     }
-    .left-about-heading, .right-about-heading {
+    #left-about, #right-about {
         width: 100%;
         float: left;
         padding: 0;
@@ -295,7 +295,7 @@ footer {
         width: 100%;
         text-align: center;
     }
-    .left-about-heading p, .right-about-heading {
+    .left-about-heading p, .right-about-heading p {
         text-align: center;
         padding: 0 20px;
     }
